config: slider params

--- a/index.html
+++ b/index.html
@@ -155,9 +155,9 @@
     <!--    PROJECTS SECTION    -->
     <section class="projects">
         <h2 class="projects__title">Наши проекты</h2>
-        <div class="projects-slider">
-            <div class="projects-slider__slides">
-                <div class="projects-slider__slide">
+        <div class="swiper">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide">
                     <div class="slide__image">
                         <img src="src/image/projects/sliderImg1.png" alt="Дом Уют">
                     </div>
@@ -193,7 +193,79 @@
                     </div>
 
                 </div>
-                <div class="projects-slider__slide">
+                <div class="swiper-slide">
+                    <div class="slide__image">
+                        <img src="src/image/projects/sliderImg2.png" alt="Дом Уют">
+                    </div>
+                    <div class="slide-inner">
+                        <h3 class="slide-inner__title">Дом «Эверест»</h3>
+                        <div class="slide-inner__description">
+                            <div class="slide-inner__description-item">
+                                <img src="src/image/projects/square.svg" alt="Площадь">
+                                <p>Площадь: 180 м2</p>
+                            </div>
+                            <div class="slide-inner__description-item">
+                                <img src="src/image/projects/floor.svg" alt="Площадь">
+                                <p>Этажей: 2</p>
+                            </div>
+                            <div class="slide-inner__description-item">
+                                <img src="src/image/projects/rooms.svg" alt="Площадь">
+                                <p>Комнат: 6</p>
+                            </div>
+                            <div class="slide-inner__description-item">
+                                <img src="src/image/projects/size.svg" alt="Площадь">
+                                <p>Размер: 12x12</p>
+                            </div>
+                        </div>
+                        <div class="slide-inner__price">
+                            <div class="slide-inner__price-description">
+                                <p class="price-description__title">Стоимость работ</p>
+                                <h3 class="price-description__price">5 000 000 руб</h3>
+                            </div>
+                            <div class="slide-inner__price-button">
+                                <img src="src/image/projects/arrow-right.svg" alt="arrow">
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="swiper-slide">
+                    <div class="slide__image">
+                        <img src="src/image/projects/sliderImg3.png" alt="Дом Уют">
+                    </div>
+                    <div class="slide-inner">
+                        <h3 class="slide-inner__title">Дом «Мечта»</h3>
+                        <div class="slide-inner__description">
+                            <div class="slide-inner__description-item">
+                                <img src="src/image/projects/square.svg" alt="Площадь">
+                                <p>Площадь: 180 м2</p>
+                            </div>
+                            <div class="slide-inner__description-item">
+                                <img src="src/image/projects/floor.svg" alt="Площадь">
+                                <p>Этажей: 2</p>
+                            </div>
+                            <div class="slide-inner__description-item">
+                                <img src="src/image/projects/rooms.svg" alt="Площадь">
+                                <p>Комнат: 6</p>
+                            </div>
+                            <div class="slide-inner__description-item">
+                                <img src="src/image/projects/size.svg" alt="Площадь">
+                                <p>Размер: 12x12</p>
+                            </div>
+                        </div>
+                        <div class="slide-inner__price">
+                            <div class="slide-inner__price-description">
+                                <p class="price-description__title">Стоимость работ</p>
+                                <h3 class="price-description__price">3 146 400 руб</h3>
+                            </div>
+                            <div class="slide-inner__price-button">
+                                <img src="src/image/projects/arrow-right.svg" alt="arrow">
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="swiper-slide">
                     <div class="slide__image">
                         <img src="src/image/projects/sliderImg1.png" alt="Дом Уют">
                     </div>
@@ -229,20 +301,56 @@
                     </div>
 
                 </div>
-                <div class="projects-slider__slide">
+                <div class="swiper-slide">
                     <div class="slide__image">
-                        <img src="src/image/projects/sliderImg1.png" alt="Дом Уют">
+                        <img src="src/image/projects/sliderImg2.png" alt="Дом Уют">
                     </div>
                     <div class="slide-inner">
-                        <h3 class="slide-inner__title">«Дом Уют»</h3>
+                        <h3 class="slide-inner__title">Дом «Эверест»</h3>
                         <div class="slide-inner__description">
                             <div class="slide-inner__description-item">
                                 <img src="src/image/projects/square.svg" alt="Площадь">
-                                <p>Площадь: 114 м2</p>
+                                <p>Площадь: 180 м2</p>
                             </div>
                             <div class="slide-inner__description-item">
                                 <img src="src/image/projects/floor.svg" alt="Площадь">
-                                <p>Этажей: 1</p>
+                                <p>Этажей: 2</p>
+                            </div>
+                            <div class="slide-inner__description-item">
+                                <img src="src/image/projects/rooms.svg" alt="Площадь">
+                                <p>Комнат: 6</p>
+                            </div>
+                            <div class="slide-inner__description-item">
+                                <img src="src/image/projects/size.svg" alt="Площадь">
+                                <p>Размер: 12x12</p>
+                            </div>
+                        </div>
+                        <div class="slide-inner__price">
+                            <div class="slide-inner__price-description">
+                                <p class="price-description__title">Стоимость работ</p>
+                                <h3 class="price-description__price">5 000 000 руб</h3>
+                            </div>
+                            <div class="slide-inner__price-button">
+                                <img src="src/image/projects/arrow-right.svg" alt="arrow">
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="swiper-slide">
+                    <div class="slide__image">
+                        <img src="src/image/projects/sliderImg3.png" alt="Дом Уют">
+                    </div>
+                    <div class="slide-inner">
+                        <h3 class="slide-inner__title">Дом «Мечта»</h3>
+                        <div class="slide-inner__description">
+                            <div class="slide-inner__description-item">
+                                <img src="src/image/projects/square.svg" alt="Площадь">
+                                <p>Площадь: 180 м2</p>
+                            </div>
+                            <div class="slide-inner__description-item">
+                                <img src="src/image/projects/floor.svg" alt="Площадь">
+                                <p>Этажей: 2</p>
                             </div>
                             <div class="slide-inner__description-item">
                                 <img src="src/image/projects/rooms.svg" alt="Площадь">
@@ -265,14 +373,41 @@
                     </div>
 
                 </div>
-
+            </div>
+            <div class="swiper-button-prev">
+                <img src="./src/image/svg/arrow-right.svg" alt="prev">
+            </div>
+            <div class="swiper-button-next">
+                <img src="./src/image/svg/arrow-right.svg" alt="next">
             </div>
         </div>
     </section>
 </div>
 
 
-<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+<script type="module">
+    import Swiper from 'https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.esm.browser.min.js'
+    const swiper = new Swiper('.swiper', {
+        // Optional parameters
+        direction: 'horizontal',
+         // rewind: true,
+        loop: true,
+        speed: 400,
+        slidesPerView: 4,
+        spaceBetween: 24,
+        effect: 'slide',
+
+
+        // Navigation arrows
+        navigation: {
+            nextEl: '.swiper-button-next',
+            prevEl: '.swiper-button-prev',
+        }
+    });
+
+</script>
+
+</script>
 <script src="js/main.js"></script>
 </body>
 </html>
