fix: swiper configuration

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                         <img class="about-content__why-photo" src="src/image/author/why.png" alt="why us?">
                         <ul>
                             <li>Отработаны процессы и накоплен огромный опыт.</li>
-                            <li>Строим под ключ: от геоизысканий участка до ландшафтных работ.</li>
+                            <li>Строим под ключ: от гео-изысканий участка до ландшафтных работ.</li>
                             <li>Благодаря комплексному подходу с нами спокойно.</li>
                             <li>Мы всегда дорабатываем проект дома под выбранный участок и потребности каждого из будущих жильцов.</li>
                             <li>Строгое соблюдение ГОСТ, СНиП.</li>
@@ -388,26 +388,22 @@
 <script type="module">
     import Swiper from 'https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.esm.browser.min.js'
     const swiper = new Swiper('.swiper', {
-        // Optional parameters
         direction: 'horizontal',
-         // rewind: true,
         loop: true,
         speed: 400,
-        slidesPerView: 4,
+        slidesPerView: 3,
         spaceBetween: 24,
+        slidesPerGroup: 1,
+        width: 1122,
         effect: 'slide',
-
-
         // Navigation arrows
         navigation: {
             nextEl: '.swiper-button-next',
             prevEl: '.swiper-button-prev',
         }
     });
-
 </script>
 
-</script>
 <script src="js/main.js"></script>
 </body>
 </html>
