add: building section

--- a/index.html
+++ b/index.html
@@ -381,6 +381,43 @@
                 <img src="./src/image/svg/arrow-right.svg" alt="next">
             </div>
         </div>
+        <div class="projects-button">
+            <img src="./src/image/svg/arrow-right.svg" alt="prev">
+            <span>Смотреть все проекты</span>
+        </div>
+    </section>
+    <section class="building container">
+        <div class="building-buttons">
+            <div class="building-buttons__button  active">
+                <div class="building-buttons__button-image">
+                    <img src="./src/image/building/house.svg" alt="Дома">
+                </div>
+                <p class="building-buttons__button-subtitle">Дома</p>
+            </div>
+            <div class="building-buttons__button">
+            <div class="building-buttons__button-image">
+                <img src="./src/image/building/garage.svg" alt="Гараж">
+            </div>
+                <p>Гаражи</p>
+            </div>
+            <div class="building-buttons__button">
+            <div class="building-buttons__button-image">
+                <img src="./src/image/building/bath.svg" alt="Баня">
+            </div>
+                <p>Бани</p>
+            </div>
+        </div>
+        <div class="building-content">
+            <div class="building-content__description">
+                <h2>Мы строим загородные дома</h2>
+                <h4>любой архитектуры</h4>
+                <p>Мы беремся за самые сложные работы, для того, чтобы построить дом вашей мечты</p>
+                <p>Мы под ваш бюджет построим: Дом, баню и так далее</p>
+            </div>
+            <div class="building-content__video">
+                <img src="./src/image/building/video.png" alt="house video">
+            </div>
+        </div>
     </section>
 </div>
 
@@ -391,7 +428,7 @@
         direction: 'horizontal',
         loop: true,
         speed: 400,
-        slidesPerView: 3,
+        slidesPerView: 2,
         spaceBetween: 24,
         slidesPerGroup: 1,
         width: 1122,
