fix: hover on buttons

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                          xmlns:xlink="http://www.w3.org/1999/xlink">
                         <defs>
                             <path d="M6,114a108,108 0 1,0 216,0a108,108 0 1,0 -216,0" id="textcircle"/>
+<!--                            Вынести стили в css-->
                             <style>
                                 text {
                                     font-size: 12px;
@@ -386,7 +387,7 @@
             <span>Смотреть все проекты</span>
         </div>
     </section>
-    <section class="building container">
+    <section class="building">
         <div class="building-buttons">
             <div class="building-buttons__button  active">
                 <div class="building-buttons__button-image">
