add: progress xection whitout tab logic

--- a/index.html
+++ b/index.html
@@ -101,19 +101,21 @@
                 </p>
             </div>
         </div>
-                <div class="about-content">
-                    <div class="about-content__why-description">
-                        <img class="about-content__why-photo" src="src/image/author/why.png" alt="why us?">
-                        <ul>
-                            <li>Отработаны процессы и накоплен огромный опыт.</li>
-                            <li>Строим под ключ: от гео-изысканий участка до ландшафтных работ.</li>
-                            <li>Благодаря комплексному подходу с нами спокойно.</li>
-                            <li>Мы всегда дорабатываем проект дома под выбранный участок и потребности каждого из будущих жильцов.</li>
-                            <li>Строгое соблюдение ГОСТ, СНиП.</li>
-                            <li>Полный цикл — от лесозаготовки до готового дома под ключ.</li>
-                        </ul>
-                    </div>
-                </div>
+        <div class="about-content">
+            <div class="about-content__why-description">
+                <img class="about-content__why-photo" src="src/image/author/why.png" alt="why us?">
+                <ul>
+                    <li>Отработаны процессы и накоплен огромный опыт.</li>
+                    <li>Строим под ключ: от гео-изысканий участка до ландшафтных работ.</li>
+                    <li>Благодаря комплексному подходу с нами спокойно.</li>
+                    <li>Мы всегда дорабатываем проект дома под выбранный участок и потребности каждого из будущих
+                        жильцов.
+                    </li>
+                    <li>Строгое соблюдение ГОСТ, СНиП.</li>
+                    <li>Полный цикл — от лесозаготовки до готового дома под ключ.</li>
+                </ul>
+            </div>
+        </div>
     </section>
     <!--    ADVANTAGES SECTION    -->
     <section class="advantages">
@@ -418,6 +420,31 @@
             <div class="building-content__video">
                 <img src="./src/image/building/video.png" alt="house video">
             </div>
+        </div>
+    </section>
+    <section class="progress">
+        <h2 class="progress__title">Ход строительства</h2>
+            <ul class="progress-tabs">
+                <li class="progress-tabs__tab" data-id="4">Фундамент</li>
+                <li class="progress-tabs__tab active" data-id="5">Сборка и Монтаж дома</li>
+                <li class="progress-tabs__tab" data-id="6">Инженерные системы</li>
+                <li class="progress-tabs__tab" data-id="7">Отделка</li>
+                <li class="progress-tabs__tab" data-id="8">Отзыв клиента</li>
+            </ul>
+        <div class="progress-content">
+            <img src="./src/image/progress/foundation.png" alt="Фундамент" class="progress-content__image">
+        </div>
+        <div class="progress-content active">
+            <img src="./src/image/progress/installation.png" alt="Сборка и Монтаж" class="progress-content__image">
+        </div>
+        <div class="progress-content">
+            <img src="./src/image/progress/systems.png" alt="Инженерные системы" class="progress-content__image">
+        </div>
+        <div class="progress-content">
+            <img src="./src/image/progress/finishing.png" alt="Отделка" class="progress-content__image">
+        </div>
+        <div class="progress-content">
+            <img src="./src/image/progress/feedbackVideo.png" alt="Отзыв клиента" class="progress-content__image">
         </div>
     </section>
 </div>
