add: hovers on activ buildings button

--- a/index.html
+++ b/index.html
@@ -374,7 +374,6 @@
                             </div>
                         </div>
                     </div>
-
                 </div>
             </div>
             <div class="swiper-button-prev">
@@ -391,7 +390,7 @@
     </section>
     <section class="building">
         <div class="building-buttons">
-            <div class="building-buttons__button  active">
+            <div class="building-buttons__button active">
                 <div class="building-buttons__button-image">
                     <img src="./src/image/building/house.svg" alt="Дома">
                 </div>
@@ -401,13 +400,13 @@
             <div class="building-buttons__button-image">
                 <img src="./src/image/building/garage.svg" alt="Гараж">
             </div>
-                <p>Гаражи</p>
+                <p class="building-buttons__button-subtitle">Гаражи</p>
             </div>
             <div class="building-buttons__button">
             <div class="building-buttons__button-image">
                 <img src="./src/image/building/bath.svg" alt="Баня">
             </div>
-                <p>Бани</p>
+                <p class="building-buttons__button-subtitle">Бани</p>
             </div>
         </div>
         <div class="building-content">
