add: quiz first slide layout

--- a/index.html
+++ b/index.html
@@ -448,6 +448,75 @@
             <img src="./src/image/progress/feedbackVideo.png" alt="Отзыв клиента" class="progress-content__image">
         </div>
     </section>
+<!--    QUIZ SECTION CONTAINER   -->
+    <section class="quiz">
+        <h5 class="quiz__subtitle">Пройдите бесплатный тест-калькулятор</h5>
+        <h2 class="quiz__title">Получите предварительный расчет стоимости дома за 1 минуту</h2>
+<!--        QUIZ       -->
+        <div class="quiz-calculator" id="quiz">
+            <div class="quiz-questions">
+                <div class="quiz-questions-item">
+                    <h3 class="quiz-questions-item__question">Какой дом вы хотите построить?</h3>
+                    <div class="quiz-questions-item__answers">
+                        <div>
+                            <label>
+                                <img  src="./src/image/quiz/firstQ/block.png" alt="">
+                                <div>
+                                    <input type="radio" name="q1" class="radio">
+                                </div>
+                                <p>Дом из блоков</p>
+                            </label>
+                        </div>
+                        <div>
+                            <label>
+                                <img src="./src/image/quiz/firstQ/carcass.png" alt="">
+                                <div>
+                                    <input type="radio" name="q1"  class="radio">
+                                </div>
+                                <p>Каркасный дом</p>
+                            </label>
+                        </div>
+                        <div>
+                            <label>
+                                <img src="./src/image/quiz/firstQ/brick.png" alt="">
+                                <div>
+                                    <input type="radio" name="q1" class="radio">
+                                </div>
+                                <p>Кирпичный дом</p>
+                            </label>
+                        </div>
+                        <div>
+                            <label>
+                                <img src="./src/image/quiz/firstQ/beam.png" alt="">
+                                <div>
+                                    <input type="radio" name="q1" class="radio">
+                                </div>
+                                <p>Дом из профилированного бруса</p>
+                            </label>
+                        </div>
+                        <div>
+                            <label>
+                                <img src="./src/image/quiz/firstQ/celinder.png" alt="">
+                                <div>
+                                    <input type="radio" name="q1" class="radio">
+                                </div>
+                                <p>Дом из цилиндрированного бруса</p>
+                            </label>
+                        </div>
+                        <div>
+                            <label>
+                                <img src="./src/image/quiz/firstQ/sip.png" alt="">
+                                <div>
+                                    <input type="radio" name="q1" class="radio">
+                                </div>
+                                <p>Дом из SIP-панелей</p>
+                            </label>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </div>
 
 
