add: layout less 1400px

--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
         </div>
     </section>
 <!--    QUIZ SECTION CONTAINER   -->
-    <section class="quiz">
+    <section class="quiz container">
         <h5 class="quiz__subtitle">Пройдите бесплатный тест-калькулятор</h5>
         <h2 class="quiz__title">Получите предварительный расчет стоимости дома за 1 минуту</h2>
 <!--        QUIZ       -->
@@ -458,60 +458,42 @@
                 <div class="quiz-questions-item">
                     <h3 class="quiz-questions-item__question">Какой дом вы хотите построить?</h3>
                     <div class="quiz-questions-item__answers">
-                        <div>
                             <label>
                                 <img  src="./src/image/quiz/firstQ/block.png" alt="">
-                                <div>
-                                    <input type="radio" name="q1" class="radio">
-                                </div>
+                                <input type="radio" name="q1" class="radio">
+                                <div class="custom-radio__button"></div>
                                 <p>Дом из блоков</p>
                             </label>
-                        </div>
-                        <div>
                             <label>
                                 <img src="./src/image/quiz/firstQ/carcass.png" alt="">
-                                <div>
                                     <input type="radio" name="q1"  class="radio">
-                                </div>
+                                    <div class="custom-radio__button"></div>
                                 <p>Каркасный дом</p>
                             </label>
-                        </div>
-                        <div>
                             <label>
                                 <img src="./src/image/quiz/firstQ/brick.png" alt="">
-                                <div>
                                     <input type="radio" name="q1" class="radio">
-                                </div>
+                                    <div class="custom-radio__button"></div>
                                 <p>Кирпичный дом</p>
                             </label>
-                        </div>
-                        <div>
                             <label>
                                 <img src="./src/image/quiz/firstQ/beam.png" alt="">
-                                <div>
                                     <input type="radio" name="q1" class="radio">
-                                </div>
+                                    <div class="custom-radio__button"></div>
                                 <p>Дом из профилированного бруса</p>
                             </label>
-                        </div>
-                        <div>
                             <label>
                                 <img src="./src/image/quiz/firstQ/celinder.png" alt="">
-                                <div>
                                     <input type="radio" name="q1" class="radio">
-                                </div>
+                                    <div class="custom-radio__button"></div>
                                 <p>Дом из цилиндрированного бруса</p>
                             </label>
-                        </div>
-                        <div>
                             <label>
                                 <img src="./src/image/quiz/firstQ/sip.png" alt="">
-                                <div>
                                     <input type="radio" name="q1" class="radio">
-                                </div>
+                                    <div class="custom-radio__button"></div>
                                 <p>Дом из SIP-панелей</p>
                             </label>
-                        </div>
                     </div>
                 </div>
             </div>
